@@ -200,6 +200,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #16486: Make aifc files work with 'with' as context managers.
+
 - Issue #16485: Fix file descriptor not being closed if file header patching
   fails on closing of aifc file.
 
